--- a/test_app/templates/test_app/detail.html
+++ b/test_app/templates/test_app/detail.html
@@ -5,5 +5,5 @@
 <p>이름은 {{test.name}}인거냐?</p>
 <p>이메일은 {{test.email}}인거냐?</p>
 <p>만든날짜는 {{test.create_at}}인거냐?</p>
-
+<p>삭제하고 싶은거냐?</p>
 {% endblock content %}
