--- a/test_app/templates/test_app/index.html
+++ b/test_app/templates/test_app/index.html
@@ -2,4 +2,11 @@
 {% block content %}
 <h1>복습용 제목</h1>
 <a href="{% url "test_app:create" %}">[CREATE]</a>
+<ul>
+    {% for test in tests %}
+    <li>
+        <a href="{% url "test_app:detail" test.pk %}">{{test.name}}님의 이메일은 : {{test.email}}</a>
+    </li>
+    {% endfor %}
+</ul>
 {% endblock content %}
