--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>test_project</title>
 </head>
-<body>
+<body class='container'>
     <a href="{% url "test_app:index" %}">[메인]</a>
+    {% block content %}
+    
+    {% endblock content %}
 </body>
 </html>
-{% block content %}
-
-{% endblock content %}
